Bug 1054753: IonMonkey: Infer functions should not optimize when encountering MIRType_Symbol, r=nbp